syntax = "proto3";

package wg.cosmo.common;

enum EnumStatusCode {
  OK = 0;
  ERR = 1;
  ERR_NOT_FOUND = 2;
  ERR_ALREADY_EXISTS = 3;
  ERR_INVALID_SUBGRAPH_SCHEMA = 4;
  ERR_SUBGRAPH_COMPOSITION_FAILED  = 5;
  ERR_SUBGRAPH_CHECK_FAILED  =6;
  ERR_INVALID_LABELS = 7;
  ERR_ANALYTICS_DISABLED = 8;
  ERROR_NOT_AUTHENTICATED = 9;
  ERR_OPENAI_DISABLED = 10;
  ERR_FREE_TRIAL_EXPIRED = 11;
}